--- a/src/CryptoInkLib.csproj
+++ b/src/CryptoInkLib.csproj
@@ -70,11 +70,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="KeyStore\KeyStore.cs" />
-    <Compile Include="KeyStore\KeyStoreCrypto.cs" />
-    <Compile Include="KeyStore\KeyStoreManager.cs" />
-    <Compile Include="KeyStore\KeyStoreStorage.cs" />
-    <Compile Include="KeyStore\UserSession.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="FileCrypter\FileCrypter.cs" />
     <Compile Include="FileCrypter\FileHeaderCrypter.cs" />
@@ -94,18 +89,34 @@
     <Compile Include="3rdParty\XtsSharp\src\XTSSharp\XtsSectorStream.cs" />
     <Compile Include="3rdParty\XtsSharp\src\XTSSharp\XtsStream.cs" />
     <Compile Include="RemoteServices\Xmpp\XmppManager.cs" />
-    <Compile Include="RemoteServices\Conversation.cs" />
-    <Compile Include="RemoteServices\ConversationManager.cs" />
     <Compile Include="RemoteServices\IProtocolManager.cs" />
-    <Compile Include="RemoteServices\Message.cs" />
-    <Compile Include="KeyStore\Key\Key.cs" />
-    <Compile Include="KeyStore\Key\ServiceInfo\SRemoteService.cs" />
-    <Compile Include="KeyStore\Key\ServiceInfo\SService.cs" />
-    <Compile Include="KeyStore\Key\KeyGenerator\KeyGenerator.cs" />
-    <Compile Include="KeyStore\Key\KeyGenerator\FileEncUserKey\FileEncUserKey.cs" />
-    <Compile Include="KeyStore\Key\KeyGenerator\FileEncUserKey\FileEncUserKeyGen.cs" />
     <Compile Include="Logger\Logger.cs" />
     <Compile Include="Logger\ELogLevel.cs" />
+    <Compile Include="AccountManager\AccountManager.cs" />
+    <Compile Include="IDManager\UserSession.cs" />
+    <Compile Include="IDManager\IDManager.cs" />
+    <Compile Include="IDManager\ID.cs" />
+    <Compile Include="IDManager\IDCrypto.cs" />
+    <Compile Include="IDManager\IDStorage.cs" />
+    <Compile Include="IDManager\KeyBox.cs" />
+    <Compile Include="IDManager\Keyring.cs" />
+    <Compile Include="IDManager\EKeyringType.cs" />
+    <Compile Include="ConversationManager\Conversation.cs" />
+    <Compile Include="ConversationManager\ConversationManager.cs" />
+    <Compile Include="ConversationManager\CryptoConversationManager.cs" />
+    <Compile Include="ConversationManager\Message.cs" />
+    <Compile Include="IDManager\KeyManager\Key.cs" />
+    <Compile Include="IDManager\KeyManager\ServiceInfo\SRemoteService.cs" />
+    <Compile Include="IDManager\KeyManager\ServiceInfo\SService.cs" />
+    <Compile Include="IDManager\KeyManager\KeyGenerator\KeyGenerator.cs" />
+    <Compile Include="IDManager\KeyManager\KeyGenerator\FileEncUserKey\FileEncUserKey.cs" />
+    <Compile Include="IDManager\KeyManager\KeyGenerator\FileEncUserKey\FileEncUserKeyGen.cs" />
+    <Compile Include="IDManager\KeyManager\KeyGenerator\FileEncUserKey\OTRKeyGen.cs" />
+    <Compile Include="IDManager\KeyManager\KeyGenerator\FileEncUserKey\OpenPGPKeyGen.cs" />
+    <Compile Include="IDManager\KeyManager\ServiceInfo\EServiceType.cs" />
+    <Compile Include="IDManager\KeyManager\ServiceInfo\EAuthType.cs" />
+    <Compile Include="IDManager\KeyManager\KeyGenerator\OpenPGP\OpenPGPKeyRingGenerator.cs" />
+    <Compile Include="IDManager\KeyManager\KeyGenerator\OpenPGP\OpenPGPKeyringParams.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\SQLitePCL.raw.0.8.1\build\net45\SQLitePCL.raw.targets" Condition="Exists('packages\SQLitePCL.raw.0.8.1\build\net45\SQLitePCL.raw.targets')" />
@@ -117,18 +128,22 @@
     <None Include="3rdParty\XtsSharp\src\XTSSharp\XTSSharp.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="KeyStore\" />
     <Folder Include="FileCrypter\" />
     <Folder Include="3rdParty\" />
     <Folder Include="3rdParty\XtsSharp\" />
     <Folder Include="RemoteServices\" />
     <Folder Include="RemoteServices\Email\" />
     <Folder Include="RemoteServices\Xmpp\" />
-    <Folder Include="KeyStore\Key\" />
-    <Folder Include="KeyStore\Key\ServiceInfo\" />
-    <Folder Include="KeyStore\Key\KeyGenerator\" />
-    <Folder Include="KeyStore\Key\KeyGenerator\FileEncUserKey\" />
-    <Folder Include="CryptoProtocols\Mono.OTR\" />
     <Folder Include="Logger\" />
+    <Folder Include="ContactManager\" />
+    <Folder Include="AccountManager\" />
+    <Folder Include="IDManager\" />
+    <Folder Include="ReturnCodes\" />
+    <Folder Include="ConversationManager\" />
+    <Folder Include="IDManager\KeyManager\" />
+    <Folder Include="IDManager\KeyManager\ServiceInfo\" />
+    <Folder Include="IDManager\KeyManager\KeyGenerator\" />
+    <Folder Include="IDManager\KeyManager\KeyGenerator\FileEncUserKey\" />
+    <Folder Include="IDManager\KeyManager\KeyGenerator\OpenPGP\" />
   </ItemGroup>
 </Project>
