--- a/src/CryptoInkLib.csproj
+++ b/src/CryptoInkLib.csproj
@@ -110,13 +110,14 @@
     <Compile Include="IDManager\KeyManager\ServiceInfo\SService.cs" />
     <Compile Include="IDManager\KeyManager\KeyGenerator\KeyGenerator.cs" />
     <Compile Include="IDManager\KeyManager\KeyGenerator\FileEncUserKey\FileEncUserKey.cs" />
-    <Compile Include="IDManager\KeyManager\KeyGenerator\FileEncUserKey\FileEncUserKeyGen.cs" />
-    <Compile Include="IDManager\KeyManager\KeyGenerator\FileEncUserKey\OTRKeyGen.cs" />
-    <Compile Include="IDManager\KeyManager\KeyGenerator\FileEncUserKey\OpenPGPKeyGen.cs" />
     <Compile Include="IDManager\KeyManager\ServiceInfo\EServiceType.cs" />
     <Compile Include="IDManager\KeyManager\ServiceInfo\EAuthType.cs" />
     <Compile Include="IDManager\KeyManager\KeyGenerator\OpenPGP\OpenPGPKeyRingGenerator.cs" />
     <Compile Include="IDManager\KeyManager\KeyGenerator\OpenPGP\OpenPGPKeyringParams.cs" />
+    <Compile Include="IDManager\KeyManager\KeyGenerator\OpenPGP\OpenPGPRing.cs" />
+    <Compile Include="IDManager\KeyManager\KeyGenerator\FileEncUserKeyGen.cs" />
+    <Compile Include="IDManager\KeyManager\KeyGenerator\OpenPGPKeyGen.cs" />
+    <Compile Include="IDManager\KeyManager\KeyGenerator\OTRKeyGen.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\SQLitePCL.raw.0.8.1\build\net45\SQLitePCL.raw.targets" Condition="Exists('packages\SQLitePCL.raw.0.8.1\build\net45\SQLitePCL.raw.targets')" />
