--- a/src/CryptoInkLib.csproj
+++ b/src/CryptoInkLib.csproj
@@ -118,6 +118,7 @@
     <Compile Include="IDManager\KeyManager\KeyGenerator\FileEncUserKeyGen.cs" />
     <Compile Include="IDManager\KeyManager\KeyGenerator\OpenPGPKeyGen.cs" />
     <Compile Include="IDManager\KeyManager\KeyGenerator\OTRKeyGen.cs" />
+    <Compile Include="RemoteServices\Email\openPgpCrypter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\SQLitePCL.raw.0.8.1\build\net45\SQLitePCL.raw.targets" Condition="Exists('packages\SQLitePCL.raw.0.8.1\build\net45\SQLitePCL.raw.targets')" />
