--- a/src/CryptoInkLib.csproj
+++ b/src/CryptoInkLib.csproj
@@ -36,9 +36,6 @@
     <Reference Include="System.Security" />
     <Reference Include="mscorlib" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="OTRLibMono">
-      <HintPath>packages\OTRLibMono.1.0.1\lib\OTRLibMono.dll</HintPath>
-    </Reference>
     <Reference Include="log4net">
       <HintPath>packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
     </Reference>
@@ -49,9 +46,6 @@
     <Reference Include="agsXMPP">
       <HintPath>packages\Loamen.agsXMPP.1.3.1\lib\net45\agsXMPP.dll</HintPath>
     </Reference>
-    <Reference Include="BouncyCastle.Crypto">
-      <HintPath>packages\BouncyCastle.1.7.0\lib\Net40-Client\BouncyCastle.Crypto.dll</HintPath>
-    </Reference>
     <Reference Include="SQLitePCL.raw">
       <HintPath>packages\SQLitePCL.raw.0.8.1\lib\net45\SQLitePCL.raw.dll</HintPath>
     </Reference>
@@ -61,11 +55,23 @@
     <Reference Include="ICSharpCode.SharpZipLib.Portable">
       <HintPath>packages\SharpZipLib.Portable.0.86.0.0003\lib\portable-net45+netcore45+wp8+win8+wpa81+MonoTouch+MonoAndroid+Xamarin.iOS10\ICSharpCode.SharpZipLib.Portable.dll</HintPath>
     </Reference>
-    <Reference Include="Stateless">
-      <HintPath>packages\Stateless.2.5.21.0\lib\portable-net40+sl50+win+wp80\Stateless.dll</HintPath>
-    </Reference>
     <Reference Include="Couchbase.Lite">
       <HintPath>packages\Couchbase.Lite.1.1.2.0\lib\net45\Couchbase.Lite.dll</HintPath>
+    </Reference>
+    <Reference Include="BouncyCastle">
+      <HintPath>packages\MimeKit.1.2.19\lib\net45\BouncyCastle.dll</HintPath>
+    </Reference>
+    <Reference Include="MimeKit">
+      <HintPath>packages\MimeKit.1.2.19\lib\net45\MimeKit.dll</HintPath>
+    </Reference>
+    <Reference Include="MailKit">
+      <HintPath>packages\MailKit.1.2.16\lib\net45\MailKit.dll</HintPath>
+    </Reference>
+    <Reference Include="OTRLibMono">
+      <HintPath>packages\OTRLibMono.1.0.2\lib\OTRLibMono.dll</HintPath>
+    </Reference>
+    <Reference Include="Stateless">
+      <HintPath>packages\Stateless.2.5.36.0\lib\portable-net40+sl50+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10\Stateless.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -119,6 +125,7 @@
     <Compile Include="IDManager\KeyManager\KeyGenerator\OpenPGPKeyGen.cs" />
     <Compile Include="IDManager\KeyManager\KeyGenerator\OTRKeyGen.cs" />
     <Compile Include="RemoteServices\Email\openPgpCrypter.cs" />
+    <Compile Include="RemoteServices\Email\EmailManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\SQLitePCL.raw.0.8.1\build\net45\SQLitePCL.raw.targets" Condition="Exists('packages\SQLitePCL.raw.0.8.1\build\net45\SQLitePCL.raw.targets')" />
