--- a/src/CryptoInkLib.csproj
+++ b/src/CryptoInkLib.csproj
@@ -73,6 +73,9 @@
     <Reference Include="Stateless">
       <HintPath>packages\Stateless.2.5.36.0\lib\portable-net40+sl50+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10\Stateless.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>packages\RestSharp.105.2.3\lib\net45\RestSharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -126,6 +129,17 @@
     <Compile Include="IDManager\KeyManager\KeyGenerator\OTRKeyGen.cs" />
     <Compile Include="RemoteServices\Email\openPgpCrypter.cs" />
     <Compile Include="RemoteServices\Email\EmailManager.cs" />
+    <Compile Include="RemoteServices\Email\EmailHelper.cs" />
+    <Compile Include="ContactManager\ContactManager.cs" />
+    <Compile Include="ContactManager\Contact.cs" />
+    <Compile Include="ServerApi\ProviderInfo.cs" />
+    <Compile Include="ServerApi\AccountApi.cs" />
+    <Compile Include="ServerApi\ServiceLevel.cs" />
+    <Compile Include="ServerApi\SignupResponse.cs" />
+    <Compile Include="ServerApi\AccountInfoResponse.cs" />
+    <Compile Include="ServerApi\LoginResponse.cs" />
+    <Compile Include="dKeybaseApi\dKeybaseApi.cs" />
+    <Compile Include="RemoteServices\MessagingManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\SQLitePCL.raw.0.8.1\build\net45\SQLitePCL.raw.targets" Condition="Exists('packages\SQLitePCL.raw.0.8.1\build\net45\SQLitePCL.raw.targets')" />
@@ -154,5 +168,7 @@
     <Folder Include="IDManager\KeyManager\KeyGenerator\" />
     <Folder Include="IDManager\KeyManager\KeyGenerator\FileEncUserKey\" />
     <Folder Include="IDManager\KeyManager\KeyGenerator\OpenPGP\" />
+    <Folder Include="ServerApi\" />
+    <Folder Include="dKeybaseApi\" />
   </ItemGroup>
 </Project>
