--- a/src/packages.config
+++ b/src/packages.config
@@ -7,6 +7,7 @@
   <package id="MimeKit" version="1.2.19" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net45" />
   <package id="OTRLibMono" version="1.0.2" targetFramework="net45" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net45" />
   <package id="SharpZipLib.Portable" version="0.86.0.0003" targetFramework="net45" />
   <package id="SQLitePCL.raw" version="0.8.1" targetFramework="net45" />
   <package id="SQLitePCL.ugly" version="0.8.1" targetFramework="net45" />
